--- a/frontend/src/components/sidebarStyles.css
+++ b/frontend/src/components/sidebarStyles.css
@@ -1,43 +1,46 @@
 .sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
+  width: 200px;
+  background-color: #004ea1db;
+  padding: 15px;
   height: 100%;
-  width: 250px;
-  background-color: #0F80AA;
-  opacity: 100%;
+  position: fixed;
   display: flex;
   flex-direction: column;
-  padding-top: 60px;
 }
 
 .sidebar ul {
-  list-style: none;
+  list-style-type: none;
   padding: 0;
-  margin: 0;
-  width: 100%;
 }
 
-.sidebar ul li {
-  width: 100%;
-  text-align: center;
-  margin-bottom: 10px;
+.sidebar li {
+  margin: 10px 0;
 }
 
-.sidebar ul li a {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  color: black;
+.sidebar a {
   text-decoration: none;
-  transition: background-color 0.3s;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+.sidebar a.active-link {
+  background-color: #007bff;
+  color: white;
 }
 
 .sidebar a:hover {
-  background-color: lightblue;
-}
-
-.active-link {
-  background-color: lightblue;
+  background-color: #007bff52;
   color: white;
 }
+
+.logout {
+  margin-top: auto;
+  margin-bottom: 60px;
+}
+.bi {
+  margin-right: 8px;
+}
+
