feat(employee) adding api to leave and payroll page

--- a/frontend/src/views/employees/DashboardStyles.css
+++ b/frontend/src/views/employees/DashboardStyles.css
@@ -1,25 +1,45 @@
-.custom-card {
-    border: 1px solid #e0e0e0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-  }
-  
-  .custom-card .card-title {
-    font-size: 1.25rem;
-    font-weight: 500;
-  }
-  
-  .custom-card .card-text {
-    font-size: 1rem;
-  }
-  
-  .custom-card img {
-    width: 150px;
-    height: 150px;
-  }
-  
-  .custom-card i {
-    font-size: 2rem;
-    color: #555;
-  }
-  
+.container {
+  margin-top: 5rem;
+}
+
+.card {
+  background-color: rgba(255, 255, 255, 0.5); /* Efek transparan untuk card */
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card-body {
+  padding: 1.5rem;
+}
+
+.table {
+  background-color: rgba(255, 255, 255, 0.5); /* Efek transparan untuk tabel */
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.table-responsive {
+  overflow-x: auto;
+}
+
+.card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.card-text {
+  font-size: 1rem;
+  color: #555;
+  margin-bottom: 0.5rem;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+  border-color: #0056b3;
+}
